--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Teste</title>
 </head>
 <body>
-    <h1>Se voce esta vendo iso me responde no discord porfavor!</h1>
+    <h1>Alguem quer ajudar a fazer a web pra turma e queira aprender ou já sabe HTML, CSS e java script?</h1>
 </body>
 </html>
