--- a/plataformas.html
+++ b/plataformas.html
@@ -1,4 +1,4 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Plataformas</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
@@ -13,7 +13,7 @@
     <br />
     <br />
 
-    <div id="scrathvideo">
+    <div >
         <iframe 
                 width="560"
                 height="315"
