--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml">
+﻿<html lang="pt-br">
 <head>
     <title>Inicial</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
