--- a/plataformas.html
+++ b/plataformas.html
@@ -1,11 +1,11 @@
-<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="pt-br">
 <head>
     <title>Plataformas</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>VocÍ est· na pagina plataformas</h1>
+    <h1>Voc√™ est√° na pagina plataformas</h1>
     <a href="index.html" class="btn">Inicial</a>
     <a href="membros.html" class="btn">Membros</a>
     <a href="plataformas.html" class="btn">Plataformas</a>
@@ -24,13 +24,13 @@
     </div>
 
     <p id="scrathvideoinfo">
-        Por enquanto a maioria dos nosos projÈtos foi desenvolvido no scrath 3.0; 
+        Por enquanto a maioria dos nosos proj√©tos foi desenvolvido no scrath 3.0; 
     </p>
     <div id="infoscrath">
     <p>
-    Com ele, È possÌvel criar histÛrias, jogos e animaÁıes com scripts feitos com blocos. <br />
-    … um tipo de programaÁ„o ìvisualî, mais simplificada. <br />
-    Isso permite que qualquer um, mesmo sem saber nada sobre programaÁ„o, consiga criar projetos digitais com mais facilidade.
+    Com ele, √© poss√≠vel criar hist√≥rias, jogos e anima√ß√µes com scripts feitos com blocos. <br />
+    √â um tipo de programa√ß√£o ‚Äúvisual‚Äù, mais simplificada. <br />
+    Isso permite que qualquer um, mesmo sem saber nada sobre programa√ß√£o, consiga criar projetos digitais com mais facilidade.
     </p>
     </div>
 </body>
