--- a/membros.html
+++ b/membros.html
@@ -1,11 +1,11 @@
-<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="pt-br">
 <head>
     <title>Membros</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Você está na pagina dos membros</h1>
+    <h1>VocÃª estÃ¡ na pagina dos membros</h1>
     <a href="index.html" class="btn">Inicial</a>
     <a href="membros.html" class="btn">Membros</a>
     <a href="plataformas.html" class="btn">Plataformas</a>
