--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a href="index.html" class="btn">Inicial</a>
     <a href="membros.html" class="btn">Membros</a>
     <a href="plataformas.html" class="btn">Plataformas</a>
-    <a href="contatos.html" class="btn">contatos</a>
+    <a href="projetos.html" class="btn">Jogos e Projétos</a>
     <br /> <br />
     <p id="test">Estão gostando dá web? Isto só é um test, más se quizer ver algo mais vai la em plataformas!</p>
 </body>
