--- a/plataformas.html
+++ b/plataformas.html
@@ -5,33 +5,34 @@
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Voc√™ est√° na pagina plataformas</h1>
+    <h1>VocÍ est· na pagina plataformas</h1>
     <a href="index.html" class="btn">Inicial</a>
     <a href="membros.html" class="btn">Membros</a>
     <a href="plataformas.html" class="btn">Plataformas</a>
-    <a href="contatos.html" class="btn">contatos</a>
+    <a href="projetos.html" class="btn">Jogos e ProjÈtos</a>
     <br />
     <br />
 
-    <div >
-        <iframe 
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/vjkRCwZ-BmY"
-                title="YouTube video player"
-                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-        </iframe>
-    </div>
 
-    <p id="scrathvideoinfo">
-        Por enquanto a maioria dos nosos proj√©tos foi desenvolvido no scrath 3.0; 
-    </p>
+
+    <h2 id="scrathvideoinfo">
+        Por enquanto a maioria dos nosos projÈtos foi desenvolvido no scrath 3.0
+    </h2>
     <div id="infoscrath">
-    <p>
-    Com ele, √© poss√≠vel criar hist√≥rias, jogos e anima√ß√µes com scripts feitos com blocos. <br />
-    √â um tipo de programa√ß√£o ‚Äúvisual‚Äù, mais simplificada. <br />
-    Isso permite que qualquer um, mesmo sem saber nada sobre programa√ß√£o, consiga criar projetos digitais com mais facilidade.
-    </p>
+        <p>
+            Com ele, È possÌvel criar histÛrias, jogos e animaÁıes com scripts feitos com blocos. <br />
+            … um tipo de programaÁ„o ìvisualî, mais simplificada. <br />
+            Isso permite que qualquer um, mesmo sem saber nada sobre programaÁ„o, consiga criar projetos digitais com mais facilidade.
+
+        </p>
     </div>
+    <br /> <br />
+    <h3>Video explicativo</h3>
+    <iframe width="560"
+            height="315"
+            src="https://www.youtube.com/embed/vjkRCwZ-BmY"
+            title="YouTube video player"
+            frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
+    </iframe>
 </body>
 </html>
