--- a/membros.html
+++ b/membros.html
@@ -5,10 +5,10 @@
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Você está na pagina dos membros</h1>
+    <h1>VocÃª estÃ¡ na pagina dos membros</h1>
     <a href="index.html" class="btn">Inicial</a>
     <a href="membros.html" class="btn">Membros</a>
     <a href="plataformas.html" class="btn">Plataformas</a>
-    <a href="projetos.html" class="btn">Jogos e Projétos</a>
+    <a href="projetos.html" class="btn">Jogos e ProjÃ©tos</a>
 </body>
-</html>
+</html> 
