--- a/projetos.html
+++ b/projetos.html
@@ -1,34 +1,34 @@
 <html lang="pt-br">
 <head>
-    <title>Projétos e jogos</title>
+    <title>ProjÃ©tos e jogos</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Você está na pagina contatos</h1>
+    <h1>VocÃª estÃ¡ na pagina contatos</h1>
     <a href="index.html" class="btn">Inicial</a>
     <a href="membros.html" class="btn">Membros</a>
     <a href="plataformas.html" class="btn">Plataformas</a>
-    <a href="projetos.html" class="btn">Jogos e Projétos</a>
+    <a href="projetos.html" class="btn">Jogos e ProjÃ©tos</a>
     <br /> <br /> <br />
     <h3>ROB-NAM</h3>
     <iframe src="https://turbowarp.org/551449485/embed" width="499" height="416" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <div id="instru">
     <p>
-        Instruções: <br />
+        InstruÃ§Ãµes: <br />
         Apenas responda as perguntas do ROB-NAM e ele vai adivinhar seu nome! <br />
                                                                               <br />
-        ===ATENÇÃO=== <br />
-        Este projeto vai ser migrado para outro, cujo vai ter mais interação, história, personagens e mais!
+        ===ATENÃ‡ÃƒO=== <br />
+        Este projeto vai ser migrado para outro, cujo vai ter mais interaÃ§Ã£o, histÃ³ria, personagens e mais!
                       <br />
-        Fique ligado para notícias!
+        Fique ligado para notÃ­cias!
     </p>
     </div>
     <div id="creditos">
         Arte: <a href="https://scratch.mit.edu/users/CaioRodrigoForim/">CaioRodrigoForim</a><br />
-        Programação: Por <a href="https://scratch.mit.edu/users/CaioRodrigoForim/">CaioRodrigoForim</a> também <br />
-        Gênio por trás dessa máquina hiper-inteligente:<a href="https://scratch.mit.edu/users/CaioRodrigoForim/">CaioRodrigoForim</a> de novo <br /> <br />
-        ink oficial do projéto: <a href="https://scratch.mit.edu/projects/551449485/">https://scratch.mit.edu/projects/551449485/</a>
+        ProgramaÃ§Ã£o: Por <a href="https://scratch.mit.edu/users/CaioRodrigoForim/">CaioRodrigoForim</a> tambÃ©m <br />
+        GÃªnio por trÃ¡s dessa mÃ¡quina hiper-inteligente:<a href="https://scratch.mit.edu/users/CaioRodrigoForim/">CaioRodrigoForim</a> de novo <br /> <br />
+        ink oficial do projÃ©to: <a href="https://scratch.mit.edu/projects/551449485/">https://scratch.mit.edu/projects/551449485/</a>
     </div>
-</body>
+</body> 
 </html>
