--- a/projetos.html
+++ b/projetos.html
@@ -5,7 +5,7 @@
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Você está na pagina contatos</h1>
+    <h1>Você está na pagina projétos</h1>
     <a href="index.html" class="btn">Inicial</a>
     <a href="membros.html" class="btn">Membros</a>
     <a href="plataformas.html" class="btn">Plataformas</a>
