--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Você está na pagina inicial</h1>
-    <a href="index.html" class="btn">Inicial</a>
-    <a href="membros.html" class="btn">Membros</a>
-    <a href="plataformas.html" class="btn">Plataformas</a>
-    <a href="projetos.html" class="btn">Jogos e Projétos</a>
-    <br /> <br />
-    <p id="test">Estão gostando dá web? Isto só é um test, más se quizer ver algo mais vai la em plataformas!</p>
+    <div id="menu">
+        <h1>Você está na pagina inicial</h1>
+        <a href="index.html" class="btn">Inicial</a>
+        <a href="membros.html" class="btn">Membros</a>
+        <a href="plataformas.html" class="btn">Plataformas</a>
+        <a href="projetos.html" class="btn">Jogos e Projétos</a>
+        <br /> <br />
+        <p id="test">Quem quiser contribuir com a web é só falar no discord!</p>
+    </div>
 </body>
 </html>
