--- a/membros.html
+++ b/membros.html
@@ -5,10 +5,17 @@
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>VocÃª estÃ¡ na pagina dos membros</h1>
+    <div id="menu">
+    <h1>Você está na pagina dos membros</h1>
     <a href="index.html" class="btn">Inicial</a>
     <a href="membros.html" class="btn">Membros</a>
     <a href="plataformas.html" class="btn">Plataformas</a>
-    <a href="projetos.html" class="btn">Jogos e ProjÃ©tos</a>
+    <a href="projetos.html" class="btn">Jogos e Projétos</a>
+    <</div>
+    <a href="wesleyuser.html">
+        <br /> <br />
+        <img style="height:20%" src="https://cdn.discordapp.com/attachments/852246003155206185/862752328742469652/wesleycircular.png">
+        <p style="margin-left:30px;">Wesley</p>
+    </a>
 </body>
-</html> 
+</html>
