--- a/membros.html
+++ b/membros.html
@@ -5,17 +5,19 @@
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
-    <div id="menu">  
-    <h1>VocÃª estÃ¡ na pagina dos membros</h1>
-    <a href="index.html" class="btn">Inicial</a>
-    <a href="membros.html" class="btn">Membros</a>
-    <a href="plataformas.html" class="btn">Plataformas</a>
-    <a href="projetos.html" class="btn">Jogos e ProjÃ©tos</a>
-    <</div>
-    <a href="wesleyuser.html">
-        <br /> <br />
-        <img style="height:20%" src="https://cdn.discordapp.com/attachments/852246003155206185/862752328742469652/wesleycircular.png">
-        <p style="margin-left:30px;">Wesley</p>
-    </a>
+    <div id="menu">
+        <h1>Você está na pagina dos membros</h1>
+        <a href="index.html" class="btn">Inicial</a>
+        <a href="membros.html" class="btn">Membros</a>
+        <a href="plataformas.html" class="btn">Plataformas</a>
+        <a href="projetos.html" class="btn">Jogos e Projétos</a>
+    </div>
+
+    <div>
+        <a href="wesleyuser.html" ><img style="height:20%;"  src="https://cdn.discordapp.com/attachments/852246003155206185/862752328742469652/wesleycircular.png" alt="Alternate Text" /></a>
+        <a href="caiouser.html"><img style="height:20%;" src="https://cdn.discordapp.com/attachments/852246003155206185/862848186213204018/Caiocircular.png" alt="Alternate Text" /></a>
+        <a href="fabriciouser.html">fabricio</a>
+        <a href="projetos.html"></a>
+    </div>
 </body>
 </html>
