--- a/projetos.html
+++ b/projetos.html
@@ -1,35 +1,53 @@
 <html lang="pt-br">
 <head>
-    <title>ProjÃ©tos e jogos</title>
+    <title>Projetos e jogos</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
-    <link href="index.css" rel="stylesheet" /> 
+    <link href="index.css" rel="stylesheet" />
 </head>
 <body style="text-align:center">
-    <div></div>
-    <h1>VocÃª estÃ¡ na pagina de projetos</h1>
-    <a href="index.html" class="btn">Inicial</a>
-    <a href="membros.html" class="btn">Membros</a>
-    <a href="plataformas.html" class="btn">Plataformas</a>
-    <a href="projetos.html" class="btn">Jogos e ProjÃ©tos</a>
+    <div id="menu">
+        <h1>Você está na pagina de projetos</h1>
+        <a href="index.html" class="btn">Inicial</a>
+        <a href="membros.html" class="btn">Membros</a>
+        <a href="plataformas.html" class="btn">Plataformas</a>
+        <a href="projetos.html" class="btn">Jogos e Projetos</a>
+    </div>
     <br /> <br /> <br />
-    <h3>Novo jogo: ROB-NAM</h3>
-    <iframe src="https://turbowarp.org/551449485/embed" width="499" height="416" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
-    <div id="instru">
-    <p>
-        InstruÃ§Ãµes: <br />
-        Apenas responda as perguntas do ROB-NAM e ele vai adivinhar seu nome! <br />
-                                                                              <br />
-        ===ATENÃ‡ÃƒO=== <br />
-        Este projeto vai ser migrado para outro, cujo vai ter mais interaÃ§Ã£o, histÃ³ria, personagens e mais!
-                      <br />
-        Fique ligado para notÃ­cias!
-    </p>
-    </div>
-    <div id="creditos">
-        Arte: <a href="https://scratch.mit.edu/users/CaioRodrigoForim/">CaioRodrigoForim</a><br />
-        ProgramaÃ§Ã£o: Por <a href="https://scratch.mit.edu/users/CaioRodrigoForim/">CaioRodrigoForim</a> tambÃ©m <br />
-        GÃªnio por trÃ¡s dessa mÃ¡quina hiper-inteligente:<a href="https://scratch.mit.edu/users/CaioRodrigoForim/">CaioRodrigoForim</a> de novo <br /> <br />
-        ink oficial do projÃ©to: <a href="https://scratch.mit.edu/projects/551449485/">https://scratch.mit.edu/projects/551449485/</a>
-    </div>
+    
+<h2>Projéto GOC</h2>
+<br />
+<h3>História</h3>
+<div style=" align-content: center; color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
+<p>
+    A história começa na vila, o personagem principal vive lá, desde criança, e é filho do ferreiro da vila, os moradores de lá sempre foram pacíficos, mas com o passar do tempo, percebem que tem uma condição de vida muito abaixo das que as pessoas da cidade real levam, logo, isso gera uma revolta, e o personagem principal, por seu físico, ser extremamente ágil, etc. acaba sendo escolhido como o líder dessa revolta. (primeira parte)
+    Além da vila, ocorre uma guerra entre o “reino do bem” (onde está a vila) e o “reino do mal”.
+    A revolta da vila explode, e então vários protestos acontecem, em alguns, lutas entre guardas e camponeses acabam acontecendo, e isso acaba destacando o personagem como líder dessa rebelião.
+    Matando dois coelhos com uma cajadada só, os imperadores do reino do bem põe o personagem principal no exército e dão algumas melhoras, mesmo pequenas, aos camponeses, assim eles acabam com a guerra e põe mais um excelente lutador em seu lado.
+    (segunda parte)
+    Mais os imperadores querem algo, o cristal, motivo de lendas, algo que dá um certo poder a quem tem, eles querem isso, por enquanto, eles querem o cristal para acabar com a guerra e serem consagrados heróis do reino do bem, mesmo sendo corruptos, como são.
+    O personagem principal entra no exercito e vai subindo de nível, de guarda normal até guarda geral, pois tem um excelente desempenho durante a guerra, com suas missões.
+    Mas essas missões são, na verdade, roubos organizados pelos próprios imperadores das terras sem dono e do reino mal. Esses roubos só tem um sentido, comprovar para os imperadores, nas suas teorias, que ele é o cara certo para roubar o cristal, mesmo sendo enganado, das terras sem dono.
+    (terceira parte)
+    No exército, o personagem principal conhece o arqueiro, seu grande amigo na guarda. Ele desconfia que essas missões não tem nada de bom.
+    Com o decorrer da história, os imperadores acabam descobrindo que esse cristal não é só o que as lendas contam, eles descobrem que na verdade esse cristal dá a quem o tem o poder de um ser que é quase um deus. Logo, agora eles querem esse cristal a qualquer custo, que se dane a guerra, eles podem tem um império maior que o do reino do bem e do mal juntos...
+    (quarta parte)
+    O arqueiro então descobre isso, e quando vai contar ao protagonista, é morto cruelmente por uma flecha disparada por um imperador, e morre aos pés do personagem principal dizendo as seguintes palavras: “não é o que parece...”
+    Então, muito triste pela morte de seu amigo, terá o arco coo sua segunda arma, em homenagem a ele...
+    (quinta parte)
+    Alguns dias depois ele recebe a missão de pegar um cristal nas terras sem dono, com o motivo que era a primeira intenção dos imperadores, salvar o reino do bem da guerra, ele então vai, luta contra as mais cruéis criaturas, e pega o cristal, leva até os imperadores e lhes entrega, na hora que faz iss, vê a força, o poder, que já flui aos olhos dos imperadores. Então ele é preso e recebe sentença de morte, para não contar a ninguém o motivo de poder dos imperadores, mas gloriosamente, foge, e agora precisa destruir os quase deuses que ele mesmo criou... (ultima parte)
+</p>
+</div>
+<h3>Recursos graficos já feitos</h3>
+<div style=" align-content: center; color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
+    <img  src="https://media.discordapp.net/attachments/854395140433117184/856296663131357214/New_Piskel_2.gif?width=144&height=144" alt="Alternate Text" />
+    <img src="https://cdn.discordapp.com/attachments/854395140433117184/856239667783139379/Sprite-0001.gif" alt="Alternate Text" />
+    <img src="https://cdn.discordapp.com/attachments/862280599229825024/862428863359614984/unknown.png" alt="Alternate Text" />
+    <img src="https://cdn.discordapp.com/attachments/862280599229825024/862437986649112616/pedra_certa.png" alt="Alternate Text" />
+    <img src="https://cdn.discordapp.com/attachments/862280599229825024/862678460358459392/unknown.png" alt="Alternate Text" />
+    <img src="https://cdn.discordapp.com/attachments/862280599229825024/862680791440293938/grams2.gif" alt="Alternate Text" />
+    <img src="https://cdn.discordapp.com/attachments/862280599229825024/862680894615060531/pedra_certa.png" alt="Alternate Text" />
+
+
+</div>
 </body>
 </html>
