--- a/caiouser.html
+++ b/caiouser.html
@@ -6,7 +6,7 @@
 </head>
 <body style="text-align:center">
     <div id="menu">
-        <h1>Você está no perfil de Caio </h1>
+        <h1>VocÃª estÃ¡ no perfil de Caio </h1> 
         <a href="index.html" class="btn">Inicial</a>
         <a href="membros.html" class="btn">Membros</a>
         <a href="plataformas.html" class="btn">Plataformas</a>
@@ -17,20 +17,20 @@
     <iframe src="https://turbowarp.org/551449485/embed" width="499" height="416" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <div id="instru">
         <p>
-            Instruções: <br />
+            InstruÃ§Ãµes: <br />
             Apenas responda as perguntas do ROB-NAM e ele vai adivinhar seu nome! <br />
             <br />
-            ===ATENÇÃO=== <br />
-            Este projeto vai ser migrado para outro, cujo vai ter mais interação, história, personagens e mais!
+            ===ATENÃ‡ÃƒO=== <br />
+            Este projeto vai ser migrado para outro, cujo vai ter mais interaÃ§Ã£o, histÃ³ria, personagens e mais!
             <br />
-            Fique ligado para notícias!
+            Fique ligado para notÃ­cias!
         </p>
     </div>
     <div id="creditos">
         Arte: <a href="https://scratch.mit.edu/users/CaioRodrigoForim/">CaioRodrigoForim</a><br />
-        Programação: Por <a href="https://scratch.mit.edu/users/CaioRodrigoForim/">CaioRodrigoForim</a> também <br />
-        Gênio por trás dessa máquina hiper-inteligente:<a href="https://scratch.mit.edu/users/CaioRodrigoForim/">CaioRodrigoForim</a> de novo <br /> <br />
-        ink oficial do projéto: <a href="https://scratch.mit.edu/projects/551449485/">https://scratch.mit.edu/projects/551449485/</a>
+        ProgramaÃ§Ã£o: Por <a href="https://scratch.mit.edu/users/CaioRodrigoForim/">CaioRodrigoForim</a> tambÃ©m <br />
+        GÃªnio por trÃ¡s dessa mÃ¡quina hiper-inteligente:<a href="https://scratch.mit.edu/users/CaioRodrigoForim/">CaioRodrigoForim</a> de novo <br /> <br />
+        ink oficial do projÃ©to: <a href="https://scratch.mit.edu/projects/551449485/">https://scratch.mit.edu/projects/551449485/</a>
     </div>
 </body>
 </html>
