--- a/fabriciouser.html
+++ b/fabriciouser.html
@@ -1,12 +1,12 @@
 <html lang="pt-br">
 <head>
-    <title>Fabricio</title>
+    <title>Fabricio</title> 
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
 </head>
 <body style="text-align:center">
     <div id="menu">
-        <h1>Você está no perfil do Fabricio</h1>
+        <h1>VocÃª estÃ¡ no perfil do Fabricio</h1>
         <a href="index.html" class="btn">Inicial</a>
         <a href="membros.html" class="btn">Membros</a>
         <a href="plataformas.html" class="btn">Plataformas</a>
