--- a/projetos.html
+++ b/projetos.html
@@ -1,12 +1,12 @@
 <html lang="pt-br">
 <head>
-    <title>Projetos e jogos</title>
+    <title>Projetos e jogos</title> 
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
 </head>
 <body style="text-align:center">
     <div id="menu">
-        <h1>VocÍ est· na pagina de projetos</h1>
+        <h1>Voc√™ est√° na pagina de projetos</h1>
         <a href="index.html" class="btn">Inicial</a>
         <a href="membros.html" class="btn">Membros</a>
         <a href="plataformas.html" class="btn">Plataformas</a>
@@ -14,30 +14,30 @@
     </div>
     <br /> <br /> <br />
     
-<h2>ProjÈto GOC</h2>
+<h2>Proj√©to GOC</h2>
 <br />
-<h3>HistÛria</h3>
+<h3>Hist√≥ria</h3>
 <div style=" align-content: center; color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
 <p>
-    A histÛria comeÁa na vila, o personagem principal vive l·, desde crianÁa, e È filho do ferreiro da vila, os moradores de l· sempre foram pacÌficos, mas com o passar do tempo, percebem que tem uma condiÁ„o de vida muito abaixo das que as pessoas da cidade real levam, logo, isso gera uma revolta, e o personagem principal, por seu fÌsico, ser extremamente ·gil, etc. acaba sendo escolhido como o lÌder dessa revolta. (primeira parte)
-    AlÈm da vila, ocorre uma guerra entre o ìreino do bemî (onde est· a vila) e o ìreino do malî.
-    A revolta da vila explode, e ent„o v·rios protestos acontecem, em alguns, lutas entre guardas e camponeses acabam acontecendo, e isso acaba destacando o personagem como lÌder dessa rebeli„o.
-    Matando dois coelhos com uma cajadada sÛ, os imperadores do reino do bem pıe o personagem principal no exÈrcito e d„o algumas melhoras, mesmo pequenas, aos camponeses, assim eles acabam com a guerra e pıe mais um excelente lutador em seu lado.
+    A hist√≥ria come√ßa na vila, o personagem principal vive l√°, desde crian√ßa, e √© filho do ferreiro da vila, os moradores de l√° sempre foram pac√≠ficos, mas com o passar do tempo, percebem que tem uma condi√ß√£o de vida muito abaixo das que as pessoas da cidade real levam, logo, isso gera uma revolta, e o personagem principal, por seu f√≠sico, ser extremamente √°gil, etc. acaba sendo escolhido como o l√≠der dessa revolta. (primeira parte)
+    Al√©m da vila, ocorre uma guerra entre o ‚Äúreino do bem‚Äù (onde est√° a vila) e o ‚Äúreino do mal‚Äù.
+    A revolta da vila explode, e ent√£o v√°rios protestos acontecem, em alguns, lutas entre guardas e camponeses acabam acontecendo, e isso acaba destacando o personagem como l√≠der dessa rebeli√£o.
+    Matando dois coelhos com uma cajadada s√≥, os imperadores do reino do bem p√µe o personagem principal no ex√©rcito e d√£o algumas melhoras, mesmo pequenas, aos camponeses, assim eles acabam com a guerra e p√µe mais um excelente lutador em seu lado.
     (segunda parte)
-    Mais os imperadores querem algo, o cristal, motivo de lendas, algo que d· um certo poder a quem tem, eles querem isso, por enquanto, eles querem o cristal para acabar com a guerra e serem consagrados herÛis do reino do bem, mesmo sendo corruptos, como s„o.
-    O personagem principal entra no exercito e vai subindo de nÌvel, de guarda normal atÈ guarda geral, pois tem um excelente desempenho durante a guerra, com suas missıes.
-    Mas essas missıes s„o, na verdade, roubos organizados pelos prÛprios imperadores das terras sem dono e do reino mal. Esses roubos sÛ tem um sentido, comprovar para os imperadores, nas suas teorias, que ele È o cara certo para roubar o cristal, mesmo sendo enganado, das terras sem dono.
+    Mais os imperadores querem algo, o cristal, motivo de lendas, algo que d√° um certo poder a quem tem, eles querem isso, por enquanto, eles querem o cristal para acabar com a guerra e serem consagrados her√≥is do reino do bem, mesmo sendo corruptos, como s√£o.
+    O personagem principal entra no exercito e vai subindo de n√≠vel, de guarda normal at√© guarda geral, pois tem um excelente desempenho durante a guerra, com suas miss√µes.
+    Mas essas miss√µes s√£o, na verdade, roubos organizados pelos pr√≥prios imperadores das terras sem dono e do reino mal. Esses roubos s√≥ tem um sentido, comprovar para os imperadores, nas suas teorias, que ele √© o cara certo para roubar o cristal, mesmo sendo enganado, das terras sem dono.
     (terceira parte)
-    No exÈrcito, o personagem principal conhece o arqueiro, seu grande amigo na guarda. Ele desconfia que essas missıes n„o tem nada de bom.
-    Com o decorrer da histÛria, os imperadores acabam descobrindo que esse cristal n„o È sÛ o que as lendas contam, eles descobrem que na verdade esse cristal d· a quem o tem o poder de um ser que È quase um deus. Logo, agora eles querem esse cristal a qualquer custo, que se dane a guerra, eles podem tem um impÈrio maior que o do reino do bem e do mal juntos...
+    No ex√©rcito, o personagem principal conhece o arqueiro, seu grande amigo na guarda. Ele desconfia que essas miss√µes n√£o tem nada de bom.
+    Com o decorrer da hist√≥ria, os imperadores acabam descobrindo que esse cristal n√£o √© s√≥ o que as lendas contam, eles descobrem que na verdade esse cristal d√° a quem o tem o poder de um ser que √© quase um deus. Logo, agora eles querem esse cristal a qualquer custo, que se dane a guerra, eles podem tem um imp√©rio maior que o do reino do bem e do mal juntos...
     (quarta parte)
-    O arqueiro ent„o descobre isso, e quando vai contar ao protagonista, È morto cruelmente por uma flecha disparada por um imperador, e morre aos pÈs do personagem principal dizendo as seguintes palavras: ìn„o È o que parece...î
-    Ent„o, muito triste pela morte de seu amigo, ter· o arco coo sua segunda arma, em homenagem a ele...
+    O arqueiro ent√£o descobre isso, e quando vai contar ao protagonista, √© morto cruelmente por uma flecha disparada por um imperador, e morre aos p√©s do personagem principal dizendo as seguintes palavras: ‚Äún√£o √© o que parece...‚Äù
+    Ent√£o, muito triste pela morte de seu amigo, ter√° o arco coo sua segunda arma, em homenagem a ele...
     (quinta parte)
-    Alguns dias depois ele recebe a miss„o de pegar um cristal nas terras sem dono, com o motivo que era a primeira intenÁ„o dos imperadores, salvar o reino do bem da guerra, ele ent„o vai, luta contra as mais cruÈis criaturas, e pega o cristal, leva atÈ os imperadores e lhes entrega, na hora que faz iss, vÍ a forÁa, o poder, que j· flui aos olhos dos imperadores. Ent„o ele È preso e recebe sentenÁa de morte, para n„o contar a ninguÈm o motivo de poder dos imperadores, mas gloriosamente, foge, e agora precisa destruir os quase deuses que ele mesmo criou... (ultima parte)
+    Alguns dias depois ele recebe a miss√£o de pegar um cristal nas terras sem dono, com o motivo que era a primeira inten√ß√£o dos imperadores, salvar o reino do bem da guerra, ele ent√£o vai, luta contra as mais cru√©is criaturas, e pega o cristal, leva at√© os imperadores e lhes entrega, na hora que faz iss, v√™ a for√ßa, o poder, que j√° flui aos olhos dos imperadores. Ent√£o ele √© preso e recebe senten√ßa de morte, para n√£o contar a ningu√©m o motivo de poder dos imperadores, mas gloriosamente, foge, e agora precisa destruir os quase deuses que ele mesmo criou... (ultima parte)
 </p>
 </div>
-<h3>Recursos graficos j· feitos</h3>
+<h3>Recursos graficos j√° feitos</h3>
 <div style=" align-content: center; color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
     <img  src="https://media.discordapp.net/attachments/854395140433117184/856296663131357214/New_Piskel_2.gif?width=144&height=144" alt="Alternate Text" />
     <img src="https://cdn.discordapp.com/attachments/854395140433117184/856239667783139379/Sprite-0001.gif" alt="Alternate Text" />
