--- a/fabriciouser.html
+++ b/fabriciouser.html
@@ -1,18 +1,33 @@
 <html lang="pt-br">
 <head>
-    <title>Fabricio</title> 
+    <title>Fabricio</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
 </head>
 <body style="text-align:center">
     <div id="menu">
-        <h1>VocÃª estÃ¡ no perfil do Fabricio</h1>
+        <h1>Você está no perfil do Fabricio </h1>
         <a href="index.html" class="btn">Inicial</a>
         <a href="membros.html" class="btn">Membros</a>
         <a href="plataformas.html" class="btn">Plataformas</a>
         <a href="projetos.html" class="btn">Jogos e Projetos</a>
     </div>
-    <br /> <br /> <br />
 
+    <div style=" color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
+        <img style="height:;" src="" alt="Fabricio" align="left">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
+            Phasellus bibendum aliquet erat, ut ornare purus malesuada et. <br />
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br />
+            Phasellus bibendum aliquet erat, ut ornare purus malesuada et. <br />
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </p>
+    </div>
+    <br /><br /><br />
+    <h3>Jogos:</h3>
+    <BR />
+    <div style=" text-align:left; color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: inset; ">
+        <p style="text-align:center;">Nehum jogo cadastrado até o momento</p>
+    </div>
 </body>
 </html>
