--- a/projetos.html
+++ b/projetos.html
@@ -1,6 +1,6 @@
-<html lang="pt-br">
+﻿<html lang="pt-br">
 <head>
-    <title>Projetos e jogos</title> 
+    <title>Projetos e jogos</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
 </head>
@@ -16,6 +16,15 @@
     
 <h2>Projéto GOC</h2>
 <br />
+<h3>Participantes no projéto:</h3>
+<p style=" align-content: center; color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
+    Organizador: <a href="fabriciouser.html">Fabricio</a> <br />
+    gráficos: Eder , <a href="fabriciouser.html">Fabricio</a>, Guigames, <a href="caiouser.html">Caio</a>, Ludis <br />
+    Áudio: <a href="fabriciouser.html">Fabricio</a> e <a href="caiouser.html">Caio</a> <br />
+    Cutcienes / história André e  Eder <br />
+    Apoio geral: André, Laura, Milly e <a href="wesleyuser.html">Wesley</a> <br />
+    Roteirista: Milly <br />
+</p>
 <h3>História</h3>
 <div style=" align-content: center; color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
 <p>
@@ -37,9 +46,9 @@
     Alguns dias depois ele recebe a missão de pegar um cristal nas terras sem dono, com o motivo que era a primeira intenção dos imperadores, salvar o reino do bem da guerra, ele então vai, luta contra as mais cruéis criaturas, e pega o cristal, leva até os imperadores e lhes entrega, na hora que faz iss, vê a força, o poder, que já flui aos olhos dos imperadores. Então ele é preso e recebe sentença de morte, para não contar a ninguém o motivo de poder dos imperadores, mas gloriosamente, foge, e agora precisa destruir os quase deuses que ele mesmo criou... (ultima parte)
 </p>
 </div>
-<h3>Recursos graficos já feitos</h3>
+<h3>Recursos graficos</h3>
 <div style=" align-content: center; color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
-    <img  src="https://media.discordapp.net/attachments/854395140433117184/856296663131357214/New_Piskel_2.gif?width=144&height=144" alt="Alternate Text" />
+    <img src="https://media.discordapp.net/attachments/854395140433117184/856296663131357214/New_Piskel_2.gif?width=144&height=144" alt="Alternate Text" />
     <img src="https://cdn.discordapp.com/attachments/854395140433117184/856239667783139379/Sprite-0001.gif" alt="Alternate Text" />
     <img src="https://cdn.discordapp.com/attachments/862280599229825024/862428863359614984/unknown.png" alt="Alternate Text" />
     <img src="https://cdn.discordapp.com/attachments/862280599229825024/862437986649112616/pedra_certa.png" alt="Alternate Text" />
@@ -48,6 +57,13 @@
     <img src="https://cdn.discordapp.com/attachments/862280599229825024/862680894615060531/pedra_certa.png" alt="Alternate Text" />
 
 
+</div>
+<h3>Audios</h3>
+<div style=" align-content: center; color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
+<audio controls="controls">
+    <source src="musica_doidona.mp3" type="audio/mp3" />
+
+</audio>
 </div>
 </body>
 </html>
