--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<html lang="pt-br">
 <head>
+    <meta charset="utf-8" name="viewport" content="" />
     <title>Inicial</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
@@ -12,7 +13,7 @@
         <a href="plataformas.html" class="btn">Plataformas</a>
         <a href="projetos.html" class="btn">Jogos e Projetos</a>
         <br /> <br />
-        <p id="test">Quem quiser contribuir com a web é só falar no discord!</p>
+        <p id="test">!</p>
     </div>
 </body>
 </html>
