--- a/wesleyuser.html
+++ b/wesleyuser.html
@@ -1,5 +1,6 @@
 ﻿<html lang="pt-br">
 <head>
+    <meta charset="utf-8" name="viewport" content="" />
     <title>Wesley</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
