--- a/ederuser.html
+++ b/ederuser.html
@@ -1,13 +1,13 @@
 <html lang="pt-br">
 <head>
-    <meta charset="utf-8" name="viewport" content="" />
-    <title>Caio</title>
+    <meta charset="" me="viewport" content="" />
+    <title>Eder</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
 </head>
 <body style="text-align:center">
     <div id="menu">
-        <h1>VocÃª esta no perfil do Caio </h1>
+        <h1>Você esta no perfil do Eder </h1>
         <a href="index.html" class="btn">Inicial</a>
         <a href="membros.html" class="btn">Membros</a>
         <a href="plataformas.html" class="btn">Plataformas</a>
@@ -15,7 +15,7 @@
     </div>
 
     <div style=" color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
-        <img style="height:20%;" src="https://cdn.discordapp.com/attachments/852246003155206185/862848186213204018/Caiocircular.png" align="left">
+        <img style="height:20%;" src="https://cdn.discordapp.com/attachments/852245358544289795/863071150501003304/eucircular.png" alt="Fabricio" align="left">
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
             Phasellus bibendum aliquet erat, ut ornare purus malesuada et. <br />
@@ -28,7 +28,7 @@
     <h3>Jogos:</h3>
     <BR />
     <div style=" text-align:left; color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: inset; ">
-        <a href="rob-nam.html"><img style="height:100px" src="https://cdn.discordapp.com/attachments/852245358544289795/863045385476243496/unknown.png" alt="Alternate Text" /></a>
+        <p style="text-align:center;">Nehum jogo cadastrado até o momento</p>
     </div>
 </body>
 </html>
