--- a/fabriciouser.html
+++ b/fabriciouser.html
@@ -7,7 +7,7 @@
 </head>
 <body style="text-align:center">
     <div id="menu">
-        <h1>Você está no perfil do Fabricio </h1>
+        <h1>VocÃª esta no perfil do Fabricio </h1>
         <a href="index.html" class="btn">Inicial</a>
         <a href="membros.html" class="btn">Membros</a>
         <a href="plataformas.html" class="btn">Plataformas</a>
@@ -15,7 +15,7 @@
     </div>
 
     <div style=" color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
-        <img style="height:;" src="" alt="Fabricio" align="left">
+        <img style="height:20%;" src="https://cdn.discordapp.com/attachments/852245358544289795/863095764976140329/fabriciocircular.png" alt="Fabricio" align="left">
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
             Phasellus bibendum aliquet erat, ut ornare purus malesuada et. <br />
@@ -28,7 +28,7 @@
     <h3>Jogos:</h3>
     <BR />
     <div style=" text-align:left; color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: inset; ">
-        <p style="text-align:center;">Nehum jogo cadastrado até o momento</p>
+        <p style="text-align:center;">Nehum jogo cadastrado atÃ© o momento</p>
     </div>
 </body>
 </html>
