--- a/membros.html
+++ b/membros.html
@@ -7,17 +7,20 @@
 </head>
 <body>
     <div id="menu">
-        <h1>Você está na pagina dos membros</h1>
+        <h1>VocÃª esta na pagina dos membros</h1>
         <a href="index.html" class="btn">Inicial</a>
         <a href="membros.html" class="btn">Membros</a>
         <a href="plataformas.html" class="btn">Plataformas</a>
-        <a href="projetos.html" class="btn">Jogos e Projétos</a>
+        <a href="projetos.html" class="btn">Jogos e Projetos</a>
     </div>
-
-    <div>
+    <br />
+    <div style="text-align:center;">
+        <h2>Membros</h2>
         <a href="wesleyuser.html" ><img style="height:20%;"  src="https://cdn.discordapp.com/attachments/852246003155206185/862752328742469652/wesleycircular.png" alt="Alternate Text" /></a>
         <a href="caiouser.html"><img style="height:20%;" src="https://cdn.discordapp.com/attachments/852246003155206185/862848186213204018/Caiocircular.png" alt="Alternate Text" /></a>
-        <a href="fabriciouser.html">fabricio</a>
+        <a href="fabriciouser.html"><img style="height:20%;" src="https://cdn.discordapp.com/attachments/852245358544289795/863095764976140329/fabriciocircular.png" alt="Fabricio" /></a>
+        <a href="ederuser.html"><img style="height:20%;" src="https://cdn.discordapp.com/attachments/852245358544289795/863071150501003304/eucircular.png" alt="Alternate Text" /></a>
+        
         <a href="projetos.html"></a>
     </div>
 </body>
