--- a/defendasuanaveespacial.html
+++ b/defendasuanaveespacial.html
@@ -7,7 +7,7 @@
 </head>
 <body style="text-align:center">
     <div id="menu">
-        <h1>Você está no perfil do Wesley</h1>
+        <h1>VocÃª esta no jogo Defenda Sua nave espacial</h1>
         <a href="index.html" class="btn">Inicial</a>
         <a href="membros.html" class="btn">Membros</a>
         <a href="plataformas.html" class="btn">Plataformas</a>
@@ -18,31 +18,18 @@
     </div>
     <div id="instru">
         <p>
-            ___________________________________________ <br />
-            Instruções [BR] <br />
+
+            InstruÃ§oes [BR] <br />
             <br />
             Controles de computador: <br />
             Mova a nave espacial para cima: "Seta para cima" <br />
             Mova a nave espacial para baixo: "Seta para baixo" <br />
-            Tiro a laser: "Espaço" <br />
-            <br />
-            Controle do telefone: <br />
-            Ainda não está disponível <br />
-            <br />
-            Apk para celular (2.0 ATUALIZADO!)31.7MB <br />
-            Aplicativo de computador (2.0 TUALIZADO!) 107.4MB <br />
-            <a href="https://mega.nz/folder/DPRVyQ6A#naDGrNyM_96sPHgBxKX5eQ ">BAIXAR</a><br />
-            <br />
-            Alternativa apk móvel (1.3.0) <br />
-            <a href="http://app.appsgeyser.com/13800971/Defend%20Your%20SpaceShip">BAIXAR</a> [Aviso:] O apk nunca será atualizado novamente nesta plataforma porque me pague está cobrando dinheiro que não posso pagar porque este projeto não é monetizado! , você pode baixar versões recentes e aprimoradas do Mega.<br /                                                                                                                                                                                                                                                                                        <br />
-            <br />
-
-            ___________________________________________
+            Tiro a laser: "EspaÃ§o" <br />
         </p>
     </div>
     <div id="creditos">
         Este jogo foi criado por <a href="wesleyuser.html">Wesley</a>.
-        Link oficial do projéto: <a href="https://scratch.mit.edu/projects/545610846/">https://scratch.mit.edu/projects/545610846/</a>
+        Link oficial do projï¿½to: <a href="https://scratch.mit.edu/projects/545610846/">https://scratch.mit.edu/projects/545610846/</a>
     </div>
 </body>
 </html>
