--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="plataformas.html" class="btn">Plataformas</a>
         <a href="projetos.html" class="btn">Jogos e Projetos</a>
         <br /> <br />
-        <p id="test">!</p>
+        <p id="test">Caso queira ajujdar na criação da web mande uma solicitação no discord ProcrackYT#4444</p>
     </div>
 </body>
 </html>
