--- a/caiouser.html
+++ b/caiouser.html
@@ -1,13 +1,13 @@
 <html lang="pt-br">
 <head>
     <meta charset="utf-8" name="viewport" content="" />
-    <title>Caio</title>
+    <title>Caio Rodrigo Forim</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
 </head>
 <body style="text-align:center">
     <div id="menu">
-        <h1>Você esta no perfil do Caio </h1>
+        <h1>Você esta no perfil do Caio Rodrigo Forim </h1>
         <a href="index.html" class="btn">Inicial</a>
         <a href="membros.html" class="btn">Membros</a>
         <a href="plataformas.html" class="btn">Plataformas</a>
@@ -17,13 +17,12 @@
     <div style=" color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
         <img style="height:20%;" src="https://cdn.discordapp.com/attachments/852246003155206185/862848186213204018/Caiocircular.png" align="left">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
-            Phasellus bibendum aliquet erat, ut ornare purus malesuada et. <br />
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br />
-            Phasellus bibendum aliquet erat, ut ornare purus malesuada et. <br />
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        </p>
-    </div>
+            Olá! Sou Caio Rodrigo Forim (ataby himawari). <br />
+            Eu sou artista, compositor e programador.<br />
+            Eu gosto de jogos de história e ação.<br />
+            Eu sei como programar em Construct, GDevelop, Clickteam e Scratch.
+            <br /> <br />
+</div>
     <br /><br /><br />
     <h3>Jogos:</h3>
     <BR />
