--- a/plataformas.html
+++ b/plataformas.html
@@ -1,6 +1,6 @@
 <html lang="pt-br">
 <head>
-    <meta charset="iso-8859-1" name="viewport" content="" />
+    <meta charset="utf-8" name="viewport" content="" />
     <title>Plataformas</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
