--- a/fabriciouser.html
+++ b/fabriciouser.html
@@ -16,12 +16,10 @@
 
     <div style=" color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
         <img style="height:20%;" src="https://cdn.discordapp.com/attachments/852245358544289795/863095764976140329/fabriciocircular.png" alt="Fabricio" align="left">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
-            Phasellus bibendum aliquet erat, ut ornare purus malesuada et. <br />
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br />
-            Phasellus bibendum aliquet erat, ut ornare purus malesuada et. <br />
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        <p style="text-align:left;">
+            Oi eu me chamo Fabrício Keltika Tanquella, sou Artista, programador, compositor e organizador do Guardians of Crystal. Gosto de jogos com ação e bastante violencia; Sei programar em Unity, Unreal, Java e Pyton;
+            Meu estilo de música é Funk, Trap e Eletrônica; Na parte de Arte me dou melhor com desenhos de cenários e objetos, consigo desenhar tanto em art realista quanto em pixel art, porém em art realista me dou um pouco melhor.
+            <br /> <br />
         </p>
     </div>
     <br /><br /><br />
