--- a/plataformas.html
+++ b/plataformas.html
@@ -7,10 +7,10 @@
 </head>
 <body style="text-align:center;">
     <div id="menu">
-    <h1>Voc√™ est√° na pagina plataformas</h1>
+    <h1>VocÍ est· na pagina plataformas</h1>
     <a href="index.html" class="btn">Inicial</a>
     <a href="membros.html" class="btn">Membros</a>
-    <a href="plataformas.html" class="btn">Plataformas</a> 
+    <a href="plataformas.html" class="btn">Plataformas</a>
     <a href="projetos.html" class="btn">Jogos e Projetos</a>
     </div>
     <br />
@@ -19,13 +19,13 @@
 
 
     <h2 id="scrathvideoinfo">
-        Por enquanto a maioria dos nosos proj√©tos foi desenvolvido no scrath 3.0
+        Por enquanto a maioria dos nosos projÈtos foi desenvolvido no scrath 3.0
     </h2>
     <div id="infoscrath">
         <p>
-            Com ele, √© poss√≠vel criar hist√≥rias, jogos e anima√ß√µes com scripts feitos com blocos. <br />
-            √â um tipo de programa√ß√£o ‚Äúvisual‚Äù, mais simplificada. <br />
-            Isso permite que qualquer um, mesmo sem saber nada sobre programa√ß√£o, consiga criar projetos digitais com mais facilidade.
+            Com ele, È possÌvel criar histÛrias, jogos e animaÁıes com scripts feitos com blocos. <br />
+            … um tipo de programaÁ„o ìvisualî, mais simplificada. <br />
+            Isso permite que qualquer um, mesmo sem saber nada sobre programaÁ„o, consiga criar projetos digitais com mais facilidade.
 
         </p>
     </div>
